# Household-Prediction

./: .gitignore  README.md  app.py  get_data.ipynb  prediction.py  pyproject.toml
models/: my_model.pkl  pipeline.pkl
static/: style.css
templates/: index.html
